add a more-memory profile called java6
git-svn-id: https://svn.apache.org/repos/asf/geronimo/server/trunk@803229 13f79535-47bb-0310-9956-ffa450edef68